--- a/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
+++ b/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
@@ -1,5 +1,5 @@
   
-   {%load static%}
+   {% load static %}
 
    <style>
 #header .navmenu ul {
@@ -36,8 +36,8 @@
     <nav id="navmenu" class="navmenu w-100" style="text-align: center;">
         <ul>
             <li><a href="{% url 'dashboard' %}" class="active">لوحة التحكم</a></li>
-            <li><a href="{% url 'list_article_types' %}">أنواع المقالات</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="{% url 'articletype-list' %}">أنواع المقالات</a></li>
+            <li><a href="{% url 'careerstage-list' %}">المراحل المهنية</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="blog.html">Blog</a></li>
