edit system style

--- a/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
+++ b/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
@@ -30,7 +30,7 @@
 <header id="header" class="header d-flex flex-column align-items-start position-fixed" style="top:0; right:0; height:100%; width:250px; background:#fff; border-left:1px solid #ddd; padding:20px;">
     <div class="logo mb-4">
         <img src="{% static 'archives/assets/img/logo.png' %}" alt="" style="width:100%;">
-        <h1 class="sitename">FlexStart</h1>
+        <h1 class="sitename">أرشيف رئاسة الوزراء</h1>
     </div>
 
     <nav id="navmenu" class="navmenu w-100" style="text-align: center;">
