--- a/habtoor_archive/archives/static/archives/assets/css/main.css
+++ b/habtoor_archive/archives/static/archives/assets/css/main.css
@@ -165,7 +165,7 @@ h6 {
 }
 
 .header .logo h1 {
-  font-size: 30px;
+  font-size: 25px;
   margin: 0;
   font-weight: 700;
   color: var(--heading-color);
@@ -2823,3 +2823,31 @@ section,
     font-weight: bold;
     font-size: 16px;
 }
+
+.input-group-rtl {
+    direction: rtl;
+}
+
+.input-group-rtl .form-control {
+    border-top-right-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.input-group-rtl .btn {
+    border-top-left-radius: .5rem;
+    border-bottom-left-radius: .5rem;
+
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.list-title {
+    font-size: 1.75rem;      
+    font-weight: 600;         
+    color: #0d6efd;            
+    margin-bottom: 1rem;      
+    padding-bottom: 0.3rem;   
+}
+
