--- a/habtoor_archive/archives/templates/generic/list_with_form.html
+++ b/habtoor_archive/archives/templates/generic/list_with_form.html
@@ -5,45 +5,64 @@
 
 {% block content %}
 
-<h1>{{ model_name_plural }}</h1>
-
+<div class="page-header d-flex justify-content-end align-items-center mb-3" style="margin-right: 300px;">
+    <a href="javascript:history.back()" class="btn btn-secondary m-4">
+        &larr; رجوع
+    </a>
+</div>
 
 <div class="main_dashboard">
    <div class="container mt-4">
-       <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createModal" >
-        إضافة نوع مقال جديد
-       </button>
-        <div class="table-responsive">
-          
+       
+        
+<div class="card p-3">   
+    <h3 class="list-title">قائمة {{ model_name_plural }}</h3>
 
-<form method="get" style="margin-bottom:20px;">
-    <input type="text" name="search" placeholder="ابحث هنا" value="{{ request.GET.search }}">
-  
-    <button type="submit">بحث</button>
+
+<form method="get" class="mb-3">
+    <div class="input-group input-group-rtl" style="width: 300px;">
+        <input type="text" class="form-control" name="search"
+               placeholder="ابحث هنا" value="{{ request.GET.search }}">
+
+        <button class="btn btn-primary" type="submit">بحث</button>
+    </div>
 </form>
 
 
-<!-- قائمة العناصر -->
-<h2>قائمة {{ model_name_plural }}</h2>
-<table class="table table-bordered table-striped">
-            
-    <tr>
-        {% for  field in model_fields %}
-            <th>{{ field.verbose_name }}</th>
-        {% endfor %}
-        <th>تعديل</th>
-        <th>حذف</th>
-    </tr>
-    {% for obj in objects_list %}
-    <tr>
-        {% for  field in model_fields %}
-            <td>{{ obj|attr:field.name }}</td>
-        {% endfor %}
-        <td><a href="{% url model_name|add:'-update' obj.id %}">تعديل</a></td>
-        <td><a href="{% url model_name|add:'-delete' obj.id %}">حذف</a></td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="table-container d-flex flex-column align-items-start w-100">
+    <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createModal">
+        إضافة {{ model_name_plural }}
+    </button>
+
+    <div class="table-responsive w-100">
+        <table class="table table-striped table-hover table-bordered align-middle">
+            <thead class="table-dark">
+                <tr>
+                    {% for field in model_fields %}
+                        <th class="text-start">{{ field.verbose_name }}</th>
+                    {% endfor %}
+                    <th colspan="2" class="text-center">الاجراءات</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for obj in objects_list %}
+                <tr>
+                    {% for field in model_fields %}
+                        <td class="text-start">{{ obj|attr:field.name }}</td>
+                    {% endfor %}
+                    <td class="text-center">
+                        <a class="btn btn-sm btn-primary" href="{% url model_name|add:'-update' obj.id %}">تعديل</a>
+                    </td>
+                    <td class="text-center">
+                        <a class="btn btn-sm btn-danger" href="{% url model_name|add:'-delete' obj.id %}">حذف</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
 
 {% include "includes/pagination.html" %}
 
@@ -52,7 +71,6 @@
 </div>
 </div>
 
-  <!-- فورم الإضافة -->
 <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -79,4 +97,5 @@
         </div>
     </div>
 </div>
+</div>  
 {% endblock %}
