--- a/habtoor_archive/archives/templates/includes/pagination.html
+++ b/habtoor_archive/archives/templates/includes/pagination.html
@@ -1,37 +1,28 @@
 {% if is_paginated %}
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
-        
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Previous">
-                    &laquo;
-                </a>
-            </li>
+<div class="pagination-container">
+
+    <!-- Previous -->
+    {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" class="prev">&lsaquo;</a>
+    {% else %}
+        <span class="prev disabled">&lsaquo;</span>
+    {% endif %}
+
+    <!-- Page numbers -->
+    {% for i in paginator.page_range %}
+        {% if page_obj.number == i %}
+            <span class="current">{{ i }}</span>
         {% else %}
-            <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
+            <a href="?page={{ i }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">{{ i }}</a>
         {% endif %}
+    {% endfor %}
 
-        {% for i in paginator.page_range %}
-            {% if page_obj.number == i %}
-                <li class="page-item active"><span class="page-link">{{ i }}</span></li>
-            {% else %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ i }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">{{ i }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
+    <!-- Next -->
+    {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" class="next">&rsaquo;</a>
+    {% else %}
+        <span class="next disabled">&rsaquo;</span>
+    {% endif %}
 
-        {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Next">
-                    &raquo;
-                </a>
-            </li>
-        {% else %}
-            <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
-        {% endif %}
-
-    </ul>
-</nav>
+</div>
 {% endif %}
