make all basic inheritance classess for all operations

--- a/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
+++ b/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
@@ -38,8 +38,8 @@
             <li><a href="{% url 'dashboard' %}" class="active">لوحة التحكم</a></li>
             <li><a href="{% url 'articletype-list' %}">أنواع المقالات</a></li>
             <li><a href="{% url 'careerstage-list' %}">المراحل المهنية</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#team">Team</a></li>
+            <li><a href="{% url 'authority-list' %}">الجهات</a></li>
+            <li><a href="{% url 'article-list' %}">المقالات</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="dropdown"><a href="#">Dropdown</a></li>
             <li><a href="#contact">Contact</a></li>
