--- a/habtoor_archive/archives/templates/generic/list_with_form.html
+++ b/habtoor_archive/archives/templates/generic/list_with_form.html
@@ -30,9 +30,9 @@
 
 
 <div class="table-container d-flex flex-column align-items-start w-100">
-    <button type="button" class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#createModal">
-        إضافة {{ model_name_plural }}
-    </button>
+    <a href="{% url model_name|add:'-create' %}" class="btn btn-success mb-3">
+    إضافة {{ model_name_singular }}
+    </a>
 
     <div class="table-responsive w-100">
         <table class="table table-striped table-hover table-bordered align-middle">
@@ -55,6 +55,9 @@
                     </td>
                     <td class="text-center">
                         <a class="btn btn-sm btn-danger" href="{% url model_name|add:'-delete' obj.id %}">حذف</a>
+                    </td>
+                     <td class="text-center">
+                        <a class="btn btn-sm btn-success" href="{% url model_name|add:'-detail' obj.id %}">تفاصيل</a>
                     </td>
                 </tr>
                 {% endfor %}
