--- a/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
+++ b/habtoor_archive/archives/templates/archives/dashboard/includes/header.html
@@ -37,8 +37,13 @@
         <ul>
             <li><a href="{% url 'dashboard' %}" class="active">لوحة التحكم</a></li>
             <li><a href="{% url 'articletype-list' %}">أنواع المقالات</a></li>
-            <li><a href="{% url 'careerstage-list' %}">المراحل المهنية</a></li>
-            <li><a href="{% url 'authority-list' %}">الجهات</a></li>
+            <li><a href="{% url 'category-list' %}">تصنيف المقالات</a></li>
+            <li><a href="{% url 'careerstage-list' %}">المراحل العملية</a></li>
+            <li><a href="{% url 'authoritytype-list' %}"> انواع الجهات</a></li>
+             <li><a href="{% url 'geographicallocation-list' %}">المواقع الجغرافية</a></li>
+            <li><a href="{% url 'authority-list' %}">الجهات/المؤسسات</a></li>
+            <li><a href="{% url 'publicationplatformtype-list' %}">انواع منصات النشر</a></li>
+            <li><a href="{% url 'publicationplatform-list' %}"> منصات النشر</a></li>
             <li><a href="{% url 'article-list' %}">المقالات</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="dropdown"><a href="#">Dropdown</a></li>
